klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/property/MultipleIdPropertiesErrorTest.klass
package example

class ExampleClass
{
    id1: Long id key;
    id2: Long id key;
}

// TODO: ERR_MNY_IDS should be reported on properties, not classes
